oaky I think I figured it out

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </nav>
 
     <div class="explore-screen">
-        <div class="art">art goes here</div>
-        <div class="navigation">Navigation goes here</div>
+        <div class="smut-provider">art goes here</div>
+        <div class="game-navigation">Navigation goes here</div>
         <div class="character-stats">Some character stats</div>
     </div>
 
