It's the start of something

--- a/index.html
+++ b/index.html
@@ -10,22 +10,35 @@
 </head>
 
 <body>
-    <nav>
-        <div class=title-area>
-            <span class=title-name>Erine Prototype</span>
+    <div class=main-grid>
+
+        <nav>
+            <div class=title-area>
+                <p>Erine Prototype</p>
+            </div>
+            <ul>
+                <li>Creator</li>
+                <li>Source Code</li>
+            </ul>
+        </nav>
+        
+        <div class="explore-screen">
+            <div class="smut-provider">art goes here</div>
+            <div class="game-navigation">Navigation goes here</div>
+            <div class="character-info">
+                
+                <span class="character-class"><p>Class: Maw Snuggler</p></span>
+                <ul>
+                    <li>times eaten: 362</li>
+                    <li>times cuddled: 923</li> 
+                    <li>favourite pred: dragons</li>
+                    <li>lust: 74</li>
+                </ul>
+
+            </div>
         </div>
-        <ul>
-            <li>Creator</li>
-            <li>Source Code</li>
-        </ul>
-    </nav>
 
-    <div class="explore-screen">
-        <div class="smut-provider">art goes here</div>
-        <div class="game-navigation">Navigation goes here</div>
-        <div class="character-stats">Some character stats</div>
     </div>
-
 </body>
 
 </html>
