Let's get a bit more modular

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
 <body>
     <div class=main-grid>
 
+        <!-- always at the top -->
         <nav>
             <div class=title-area>
                 <p>Erine Prototype</p>
@@ -21,16 +23,19 @@
                 <li>Source Code</li>
             </ul>
         </nav>
-        
-        <div class="explore-screen">
-            <div class="smut-provider">art goes here</div>
-            <div class="game-navigation">Navigation goes here</div>
+
+
+        <div class="erine-explore-mode">
+            <div class="erine-smut-provider">art goes here</div>
+            <div class="erine-game-navigation">Navigation goes here</div>
             <div class="character-info">
-                
-                <span class="character-class"><p>Class: Maw Snuggler</p></span>
+
+                <span class="character-class">
+                    <p>Class: Maw Snuggler</p>
+                </span>
                 <ul>
                     <li>times eaten: 362</li>
-                    <li>times cuddled: 923</li> 
+                    <li>times cuddled: 923</li>
                     <li>favourite pred: dragons</li>
                     <li>lust: 74</li>
                 </ul>
@@ -38,7 +43,14 @@
             </div>
         </div>
 
-    </div>
+        <div class="erine-save-screen">
+            "some save screen shit"
+        </div>
+
+        <div class="erine-start-menu">
+            "this is how shit starts"
+        </div>
+
 </body>
 
 </html>
